# PhoneLM

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/yuubinnkyoku/phonelm/: NativeCpuTrainingTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  benchmark_runner.cpp  benchmark_runner.h  benchmark_runner_test.cpp  cpu_reference_training.cpp  cpu_reference_training.h  mnn_training_test.cpp  mnn_training_test.h  native_bridge.cpp  training_engine.cpp  training_engine.h
app/src/main/cpp/qnn/: qnn_backend_info.cpp  qnn_backend_info.h  qnn_host_quantization.cpp  qnn_host_quantization.h  qnn_hybrid_training.cpp  qnn_hybrid_training.h  qnn_linear_training.cpp  qnn_linear_training.h  qnn_mlp_training.cpp  qnn_mlp_training.h  qnn_runtime.cpp  qnn_runtime.h  qnn_runtime_full_step.inc  qnn_runtime_mlp.inc  qnn_runtime_qairt.cpp  qnn_runtime_stub.cpp  qnn_tensor.cpp  qnn_tensor.h  qnn_training_benchmark.cpp  qnn_training_benchmark.h
app/src/main/java/com/yuubinnkyoku/phonelm/: BenchmarkConfig.kt  BenchmarkResult.kt  BenchmarkViewModel.kt  MainActivity.kt  NativeBridge.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/yuubinnkyoku/phonelm/: BenchmarkConfigTest.kt  BenchmarkResultTest.kt  BenchmarkViewModelTest.kt
diagnostics/: android-linker-qnn-analysis.md  official-firmware-qnn-inventory.md  official-firmware-vendor-qnn-analysis.md  qairt-official-tool-inventory.md  qnn-host-stub-skel-compatibility.md  qnn-htp-devicecreate-support-bundle.md  vendor-qnn-version-investigation.md
docs/: qairt-2.48.40-device-create-analysis.md  qnn-htp-backward-dw.md  qnn-htp-full-training-step.md  qnn-htp-fused-backward.md  qnn-htp-linear-training.md  qnn-htp-mlp-training.md  qnn-htp-qairt-2.48.md  qnn-htp-training-benchmark.md  qnn-minimal-matmul-model.md
docs/archive/: README-before-htp-full-step.md
docs/results/: README.md
docs/results/qnn-htp-full-training-step-2026-07/: LICENSE-NOTICE.md  README.md  correctness.csv  environment.json  performance.csv  reproduction.md  seeds.csv  weight-trajectory-summary.csv
host_tests/: cpu_reference_training_test.cpp  qnn_sdk_independent_test.cpp
scripts/: audit_qnn_apk.ps1  check_qairt.ps1  check_qairt.sh  export_public_qnn_results.ps1  fetch_mnn.ps1  fetch_mnn.sh  run_host_tests.ps1  run_qnn_device_tests.ps1  run_qnn_htp_backward_tests.ps1  run_qnn_htp_full_step_tests.ps1  run_qnn_htp_fused_backward_tests.ps1  run_qnn_htp_mlp_tests.ps1  run_qnn_training_benchmarks.ps1  run_qnn_training_tests.ps1
support/: bugreport-qnn-summary.txt  build_support_bundle.ps1  device-build-properties-anonymized.txt  device-properties-anonymized.txt  nubia-qnn-htp-devicecreate-report.md  qnn-platform-validator-summary.txt  qualcomm-qnn-htp-devicecreate-report.md  reproduction-files-manifest.md  vendor-qnn-metadata-results.txt
support/qnn_htp_device_create_repro/: CMakeLists.txt  README.md  main.cpp  result-public.txt  run.ps1
support/vendor_qnn_metadata_probe/: CMakeLists.txt  README.md  main.cpp  run.ps1
